<resources>
    <string name="app_name">WantHaver</string>
    <string name="action_settings">Einstellungen</string>
    <string name="chat">Chat</string>
    <string name="desire_detail_itemImage_contentDesc">Aufgaben Bild</string>
    <string name="desire">Auftrag</string>
    <string name="navigation_view_header_title">ToDo: HeaderNavBar</string>
    <string name="myDesires_title">Meine Aufträge</string>
    <string name="myTransactions_title">Meine Transaktionen</string>
    <string name="createDesire_title">Neuer Auftrag</string>
    <string name="settings_title">Einstellungen</string>
    <string name="logout_title">Ausloggen</string>
    <string name="no_desires">Oops, nichts gefunden</string>
    <string name="no_desires_subtitle">Sei der Erste und erstelle einen Auftrag oder ändere deinen Ort in den Filtereinstellungen</string>
    <string name="loading_desires_error">Fehler beim Laden der Aufträge</string>
    <string name="listDesires_title">Alle Aufträge</string>
    <string name="no_time_available">keine Zeit verfügbar</string>
    <string name="no_location_available">keine Location verfügbar</string>
    <string name="no_messages">Keine Nachrichten vorhanden</string>
    <string name="message">Nachricht</string>
    <string name="message_hint">Nachricht eingeben</string>
    <string name="send">Senden</string>
    <string name="profile_me">Mein Profilbild</string>
    <string name="profile_other">Profilbild Anderer</string>
    <string name="button_create_desire_first_step">Weiter</string>
    <string name="button_create_desire_second_step">Weiter zum letzten Schritt</string>
    <string name="button_create_desire_third_step">Abschließen und Veröffentlichen</string>
    <string name="button_uploadPictureForDesire">Bild hinzufügen (optional)</string>
    <string name="create_desire_title_header">Titel</string>
    <string name="create_desire_description_header">Beschreibung</string>
    <string name="create_desire_priceReward_header">Bezahlung</string>
    <string name="create_desire_price_header">Bezahlung</string>
    <string name="create_desire_reward_header">Trinkgeld</string>
    <string name="create_desire_description_hint">max. 300 Zeichen</string>
    <string name="createDesire_title_1st_Step">Neuer Auftrag: Schritt 1</string>
    <string name="createDesire_title_2nd_Step">Neuer Auftrag: Schritt 2</string>
    <string name="createDesire_title_location_Step">Neuer Auftrag: Schritt 3</string>
    <string name="createDesire_title_3rd_Step">Auftrag wird erstellt &#8230;</string>
    <string name="createDesire_Empty_Text">Bitte alle Felder ausfüllen</string>
    <string name="desire_detail_wanter">Wanter:</string>
    <string name="button_desire_accept">Auftrag annehmen</string>
    <string name="button_desire_cancel">Auftrag abbrechen</string>
    <string name="button_desire_message">Nachricht senden</string>
    <string name="no_chats">keine Nachrichten vorhanden</string>
    <string name="loading_chats_error">Fehler beim Laden der Chats</string>
    <string name="add_image">Bild hinzufügen!</string>
    <string name="take_photo">Foto aufnehmen</string>
    <string name="choose_image_gallery">Bild aus Galerie auswählen</string>
    <string name="add_image_cancel">Abbrechen</string>
    <string name="user1">Yoda</string>
    <string name="user2">John Doe</string>
    <string name="user3">Max Muster</string>
    <string name="login_header">Anmelden</string>
    <string name="filtersetting_title">Filter anpassen</string>
    <string name="category_title">Kategorie</string>
    <string name="mail_adress_title">E-Mail-Adresse</string>
    <string name="default_filter_title">Standard-Filter</string>
    <string name="change_button">ändern</string>
    <string name="reset_button">zurücksetzen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="button_change_profile_picture">Profilbild ändern</string>
    <string name="no_havers">Leider noch keine Haver vorhanden</string>
    <string name="small_price">GERING</string>
    <string name="medium_price">MITTEL</string>
    <string name="large_price">HOCH</string>
    <string name="minimal_reward_title">Mindestverdienst</string>
    <string name="minimal_rating_title">Mindestrating</string>
    <string name="location_title">Ort</string>
    <string name="filter_radius_title">Umkreis</string>
    <string name="button_apply_filter">Filter bestätigen</string>
    <string name="loading_desire_error">Fehler beim Laden des Auftrages</string>
    <string name="loading_havers_error">Fehler beim Laden der Haver</string>
    <string name="loading_haver_error">Fehler beim Laden des Havers</string>
    <string name="setting_haver_error">Fehler beim Akzeptieren des Auftrages</string>
    <string name="accepting_haver_error">Fehler beim Akzeptieren des Havers</string>
    <string name="get_user_error">Fehler beim Laden der Nutzerinformationen</string>
    <string name="update_user_error">Fehler beim Aktualisieren des Nutzers</string>
    <string name="get_chat_for_desire_error">Fehler beim Öffnen des Chats</string>
    <string name="get_categories_error">Fehler beim Laden der Kategorien</string>
    <string name="get_categorie_error">Fehler beim Laden der Kategorie</string>
    <string name="all_categories">Alle Kategorien</string>
    <string name="get_no_location_set_error">Bisher kein Ort festgelegt</string>
    <string name="filter_change_success">Filteränderung gespeichert</string>
    <string name="no_category_match">Ungültige Kategorie</string>
    <string name="button_close_transaction">Transaktion abschließen</string>
    <string name="closing_transaction_error">Fehler beim Abschließen der Transaktion</string>
    <string name="haver_status_open">OFFEN</string>
    <string name="haver_status_in_progress">IN BEARBEITUNG</string>
    <string name="haver_status_waiting">AUF WANTER WARTEN</string>
    <string name="haver_status_accepted">AKZEPTIERT</string>
    <string name="haver_status_rejected">ABGELEHNT</string>
    <string name="haver_status_done">ABGESCHLOSSEN</string>
    <string name="haver_status_deleted">GELÖSCHT</string>
    <string name="haver_status_expired">ABGELAUFEN</string>
    <string name="no_location_selected">Kein Ort ausgewählt</string>
    <string name="create_rating_error">Fehler beim Bestätigen des Ratings</string>
    <string name="transaction_title">DEINE TRANSAKTION</string>
    <string name="rating_price">Bezahlung:&#160;</string>
    <string name="rating_reward">&#160;Trinkgeld:&#160;</string>
    <string name="transaction_summary">&#160;TRANSAKTION ZUSAMMENFASSUNG&#160;</string>
    <string name="leave_your_rating_title">DEINE BEWERTUNG</string>
    <string name="button_submit">ABSCHLIESSEN</string>
    <string name="no_rating_set">Noch keine Bewertung ausgewählt</string>
    <string name="rating">Bewertung</string>
    <string name="delete_desire_error">Fehler beim Löschen des Auftrages</string>
    <string name="accept_desire_title">Auftrag akzeptieren</string>
    <string name="accept_desire_subtitle">Erstelle dein Angebot:</string>
    <string name="desire_modify_bid">Ändere dein Angebot:</string>
    <string name="desire_modify_bid_info">(Angebot ändern)</string>
    <string name="accepted_desire_bid_title">Dein Angebot</string>
    <string name="default_location_title">Aktueller/Letzter Ort:</string>
    <string name="desire_detail_bidding_wanter_info">Du hast Bieten aktiviert. Haver müssen einen Preis vorschlagen.</string>
    <string name="desire_detail_bidding_haver_info">Bieten ist aktiviert. Du musst einen Preis vorschlagen.</string>
    <string name="desire_item_bidding">Bieten</string>
    <string name="finish_desire_info">Wurde dein Auftrag erfüllt?</string>
    <string name="user_first_name">Dein Vorname</string>
    <string name="user_last_name">Dein Nachname</string>
    <string name="euro_sign" translatable="false">\u20ac</string>
    <string name="dollar_sign" translatable="false">$</string>
    <string name="send_message_error">Nachricht konnte nicht gesendet werden</string>
    <string name="noUser">Nicht eingeloggt</string>
    <string name="signup">Registrieren</string>
    <string name="signin">Anmelden</string>
    <string name="wanthavers_text" translatable="false">WantHaver</string>
    <string name="name">Name</string>
    <string name="signupNow">Jetzt Registrieren</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="dob">Geburtsdatum</string>
    <string name="userCreationFailed">Benutzer konnte nicht angelegt werden</string>
    <string name="forgotPw">Passwort vergessen</string>
    <string name="or">ODER</string>
    <string name="signinFb">per Facebook einloggen</string>
    <string name="login_empty_text">Bitte alle Felder ausfüllen</string>
    <string name="userLoginFailed">Einloggen fehlgeschlagen</string>
    <string name="desire_create_failed">Erstellen des Desires ist fehlgeschlagen</string>
    <string name="desire_image_upload_failed">Erstellen des Bildes für Dein Desire ist fehlgeschlagen</string>
    <string name="filter">Filter</string>
    <string name="button_reset_filter">Filter zurücksetzen</string>
    <string name="use_location">Standort übernehmen \n und Auftrag erstellen</string>
    <string name="set_location">Standort setzen</string>
    <string name="maps_error">Fehler beim Erstellen der Karte</string>
    <string name="pound_sign" translatable="false">£</string>
    <string name="welcomeMessage">Willkommen bei Wanthaver! \n\n Lade ein Profilbild hoch und erstelle Deinen ersten Wunsch.</string>
    <string name="toDesireList">zur Auftragübersicht</string>
    <string name="user_image_upload_failed">Benutzerbild-Hochladen fehlgeschlagen</string>
    <string name="enable_gps">Standortdienste einschalten</string>
    <string name="enable_gps_text">Standortdienste sind ausgeschaltet. Bitte GPS für eine genaue Standortbestimmung aktivieren!</string>
    <string name="enable_gps_text_desirelist">Standortdienste sind ausgeschaltet. Bitte schalte GPS ein, damit dir Desires in deiner Nähe angezeigt werden.</string>
    <string name="enable_gps_settings">Standortdienste</string>
    <string name="enable_gps_cancel">Abbruch</string>
    <string name="new_message_from">neue Nachricht von</string>
    <string name="declined_location_runtime_permission">Um die App benutzen zu können, stimme bitte den Standortdienst-Berechtigungen zu</string>
    <string name="desire_detail_rating_title">Rating für diese Transaktion</string>
    <string name="chat_overview">Chats</string>
    <string name="button_cancel">Abbruch</string>
    <string name="location_choose_location_title">Wähle einen Ort</string>
    <string name="location_choose_a_name">Wähle einen Namen</string>
    <string name="location_choose_name_submit">Bestätigen</string>
    <string name="create_location_error">Fehler beim Erstellen eines neuen Ortes</string>
    <string name="get_saved_locations_error">Fehler beim Laden gespeicherter Orte</string>
    <string name="location_name_not_set">Noch kein Name ausgewählt</string>
    <string name="Set_location_ok">OK</string>
    <string name="Set_location_cancel">Abbrechen</string>
    <string name="update_location_error">Fehler beim Aktualisieren des Ortes</string>
    <string name="flag_desire_error">Fehler beim Melden eines Desires</string>
    <string name="flag_title">Melden</string>
    <string name="flag_reason_title">Grund</string>
    <string name="flag_leave_a_comment">Verfasse einen Kommentar</string>
    <string name="delete_location_error">Fehler beim Löschen des Ortes</string>
    <string name="loading_desire_title">Laden des gewählten Auftrages &#8230;</string>
    <string name="report_desire">Auftrag melden</string>
    <string name="delete_desire">Auftrag löschen</string>
    <string name="finish_desire">Auftrag fertigstellen</string>
    <string name="about_app">Über</string>
    <string name="licenseTitle">Lizenzen</string>
</resources>