<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/listDesires_navigation_menu_item"
        android:icon="@drawable/wh_all_desires_icon"
        android:title="@string/listDesires_title" />
    <item
        android:id="@+id/myDesires_navigation_menu_item"
        android:icon="@drawable/wh_my_desires_icon"
        android:title="@string/myDesires_title" />
    <!--item
        android:id="@+id/myTransactions_navigation_menu_item"
        android:icon="@drawable/wh_my_transactions_icon"
        android:title="@string/myTransactions_title" /-->

    <item
        android:id="@+id/createDesire_navigation_menu_item"
        android:icon="@drawable/wh_create_desire_icon"
        android:title="@string/createDesire_title" />

    <item
        android:id="@+id/settings_navigation_menu_item"
        android:icon="@drawable/wh_settings_icon"
        android:title="@string/settings_title" />

    <item
        android:id="@+id/logout_navigation_menu_item"
        android:icon="@drawable/wh_logout_icon"
        android:title="@string/logout_title" />

    <item
        android:id="@+id/about_app"
        android:icon="@drawable/ic_about"
        android:title="@string/about_app" />

    <item
        android:id="@+id/licenses"
        android:icon="@drawable/wh_licenses_light"
        android:title="@string/licenseTitle" />
</menu>