<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_report_desire"
        android:title="@string/report_desire"
        android:icon="@drawable/wh_report_desire_light"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/menu_delete_desire"
        android:title="@string/delete_desire"
        android:icon="@drawable/wh_delete_bin_light"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/menu_delete_haver"
        android:title="@string/delete_desire"
        android:icon="@drawable/wh_delete_icon_light"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/menu_accept_desire"
        android:title="@string/report_desire"
        android:icon="@drawable/wh_accept_icon_light"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/menu_finish_desire"
        android:title="@string/finish_desire"
        android:icon="@drawable/wh_finish_desire_light"
        app:showAsAction="always"
        android:visible="false"/>

</menu>