<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="presenter"
            type="wanthavers.mad.cs.fau.de.wanthavers_android.login.LoginContract.Presenter" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/layout_Background1"
        android:weightSum="1"
        android:focusableInTouchMode="true">


        <wanthavers.mad.cs.fau.de.wanthavers_android.util.WantHaversTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/wanthavers_text"
            android:id="@+id/login_header"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="@android:color/black" />

        <wanthavers.mad.cs.fau.de.wanthavers_android.util.WantHaversTextView
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:id="@+id/or"
            android:background="@color/layout_Background1"
            android:text="@string/or"
            android:textSize="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/colorMainTextDark"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/signinFb"
            android:id="@+id/loginFb"
            android:textColor="@color/colorSecondary"
            android:background="@color/colorFb"
            android:layout_above="@id/or"

            android:onClick="@{() -> presenter.loginUserWithInput()}"/>


        <LinearLayout
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/or"
            android:weightSum="1">

            <wanthavers.mad.cs.fau.de.wanthavers_android.util.WantHaversTextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/email"
                android:gravity="bottom"
                android:textSize="20dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorMainTextDark"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/register_email"
            android:weightSum="1">



            <wanthavers.mad.cs.fau.de.wanthavers_android.util.WantHaversTextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/password"
                android:gravity="bottom"
                android:textSize="20dp"
                android:paddingBottom="12dp"
                android:textColor="@color/colorMainTextDark"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"/>

        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/signin"
            android:id="@+id/login"
            android:textColor="@color/colorSecondary"
            android:background="@drawable/border_primary_nocorner"
            android:layout_below="@id/register_password"
            android:onClick="@{() -> presenter.loginUserWithInput()}"/>

        <wanthavers.mad.cs.fau.de.wanthavers_android.util.WantHaversTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgotPw"
            android:layout_below="@id/login"/>

    </RelativeLayout>

</layout>

