<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="presenter"
            type="wanthavers.mad.cs.fau.de.wanthavers_android.filtersetting.FilterSettingContract.Presenter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:weightSum="1">

            <TextView
                android:id="@+id/filter_setting_category_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/category_title"
                android:textColor="@color/colorMainTextDark"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_below="@id/filter_setting_category_title"/>

            <TextView
                android:id="@+id/filter_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/create_desire_price_header"
                android:textColor="@color/colorMainTextDark"
                android:layout_below="@id/spinner_category"/>

            <LinearLayout
                android:id="@+id/price_category_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/filter_price_title">

                <Button
                    android:id="@+id/button_small_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/small_price"
                    android:textColor="@color/colorMainText"
                    android:background="@color/colorPrimary"
                    android:layout_weight=".3"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"/>

                <Button
                    android:id="@+id/button_medium_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_price"
                    android:textColor="@color/colorMainText"
                    android:background="@color/colorPrimary"
                    android:layout_weight=".3"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"/>

                <Button
                    android:id="@+id/button_large_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/large_price"
                    android:textColor="@color/colorMainText"
                    android:background="@color/colorPrimary"
                    android:layout_weight=".3"/>

            </LinearLayout>

            <TextView
                android:id="@+id/filter_min_reward_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/minimal_reward_title"
                android:textColor="@color/colorMainTextDark"
                android:layout_below="@id/price_category_buttons"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/filter_min_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:maxLength="6"
                android:layout_below="@+id/filter_min_reward_title"/>

            <RelativeLayout
                android:id="@+id/filter_min_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/filter_min_reward">

                <TextView
                    android:id="@+id/filter_min_rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/minimal_rating_title"
                    android:textColor="@color/colorMainTextDark"/>

                <RatingBar
                    android:id="@+id/filter_setting_RatingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="0"
                    android:progressBackgroundTint="@color/colorSecondary"
                    android:progressTint="@color/colorRatingStars"
                    android:secondaryProgressTint="@color/colorRatingStars"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/filter_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/filter_min_rating"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/filter_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/location_title"
                    android:textColor="@color/colorMainTextDark"
                    android:layout_centerVertical="true"/>

                <Button
                    android:id="@+id/button_change_location"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/change_button"
                    android:textColor="@color/colorPrimary"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/filter_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/filter_radius_title"
                android:textColor="@color/colorMainTextDark"
                android:layout_below="@id/filter_location"
                android:layout_marginTop="15dp"/>

            <Spinner
                android:id="@+id/spinner_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_below="@id/filter_radius"/>

            <Button
                android:id="@+id/button_apply_filter"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/button_apply_filter"
                android:textColor="@color/colorPrimary"
                android:layout_below="@+id/spinner_radius"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> presenter.setFilterWithInput()}"/>

            <Button
                android:id="@+id/button_reset_filter"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/button_reset_filter"
                android:textColor="@color/colorPrimary"
                android:layout_below="@id/button_apply_filter"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> presenter.resetFilter()}"/>

        </RelativeLayout>
    </ScrollView>

</layout>