<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="presenter"
            type="wanthavers.mad.cs.fau.de.wanthavers_android.login.LoginContract.Presenter" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:focusableInTouchMode="true">



        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/user1"
            android:id="@+id/button_user1"
            android:textColor="@color/colorPrimary"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="@{() -> presenter.login(6)}"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/user2"
            android:id="@+id/button_user2"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/button_user1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/button_user1"
            android:layout_alignEnd="@+id/button_user1"
            android:onClick="@{() -> presenter.login(7)}"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/user3"
            android:id="@+id/button_user3"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/button_user2"
            android:layout_alignRight="@+id/button_user2"
            android:layout_alignEnd="@+id/button_user2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="@{() -> presenter.login(8)}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_header"
            android:id="@+id/login_header"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/button_user1"
            android:layout_alignEnd="@+id/button_user1"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"/>


    </RelativeLayout>

</layout>

